[ Rohan Garg ] [ Scarlett Clark ] libs changed to 4.x renamed files/entries.
removed:
  debian/libkf5solid5.install
  debian/libkf5solid5.symbols
added:
  debian/libkf5solid4.install
  debian/libkf5solid4.symbols
modified:
  debian/changelog
  debian/control
  debian/rules

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Kubuntu Developers <kubuntu-devel@lists.ubuntu.com>
 XSBC-Original-Maintainer: Jonathan Riddell <jriddell@ubuntu.com>
 Build-Depends: debhelper (>= 9.0.0), cmake, pkg-kde-tools,
- extra-cmake-modules, qtbase5-dev, qtdeclarative5-dev, flex, bison,
+ extra-cmake-modules (>= 0.0.10), qtbase5-dev, qtdeclarative5-dev, flex, bison,
  libhupnp-dev, libudev-dev [linux-any]
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/frameworks/solid
@@ -12,7 +12,7 @@ Homepage: https://projects.kde.org/projects/frameworks/solid
 Package: libkf5solid-dev
 Section: libdevel
 Architecture: any
-Depends: libkf5solid5 (= ${binary:Version}), ${misc:Depends}
+Depends: libkf5solid4 (= ${binary:Version}), ${misc:Depends}
 Description: Qt library to query and control hardware
  Solid is a device integration framework. It provides a way of querying and
  interacting with hardware independently of the underlying operating system.
@@ -21,7 +21,7 @@ Description: Qt library to query and control hardware
  .
  This package contains the development files.
 
-Package: libkf5solid5
+Package: libkf5solid4
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
@@ -33,12 +33,12 @@ Description: Qt library to query and control hardware
  .
  This package is part of KDE Frameworks 5.
 
-Package: libkf5solid-dbg
+Package: libkf5solid4-dbg
 Priority: extra
 Section: debug
 Architecture: any
 Multi-Arch: same
-Depends: libkf5solid5 (= ${binary:Version}), ${misc:Depends}
+Depends: libkf5solid4 (= ${binary:Version}), ${misc:Depends}
 Description: debug symbols for libsolid
  Solid is a device integration framework. It provides a way of querying and
  interacting with hardware independently of the underlying operating system.
