--- a/debian/control
+++ b/debian/control
@@ -33,6 +33,17 @@ Description: Qt library to query and control hardware
  .
  This package is part of KDE Frameworks 5.
 
+Package: qtdeclarative5-kf5solid5.0
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: Qt library to query and control hardware plugin
+ Solid is a device integration framework. It provides a way of querying and
+ interacting with hardware independently of the underlying operating system.
+ .
+ This package is part of KDE Frameworks 5.
+
 Package: libkf5solid5-dbg
 Priority: extra
 Section: debug
