--- a/debian/control
+++ b/debian/control
@@ -3,10 +3,19 @@ Section: libs
 Priority: optional
 Maintainer: Kubuntu Developers <kubuntu-devel@lists.ubuntu.com>
 XSBC-Original-Maintainer: Jonathan Riddell <jriddell@ubuntu.com>
-Build-Depends: debhelper (>= 9.0.0), cmake, pkg-kde-tools,
- extra-cmake-modules (>= 0.0.13), qtbase5-dev, qtdeclarative5-dev, flex, bison,
- libhupnp-dev, libudev-dev [linux-any],
- qttools5-dev, qttools5-dev-tools, qt5-default
+Build-Depends: bison,
+               cmake,
+               debhelper (>= 9.0.0),
+               extra-cmake-modules (>= 0.0.13),
+               flex,
+               libhupnp-dev,
+               libudev-dev [linux-any],
+               pkg-kde-tools,
+               qt5-default,
+               qtbase5-dev,
+               qtdeclarative5-dev,
+               qttools5-dev,
+               qttools5-dev-tools
 Standards-Version: 3.9.5
 Homepage: https://projects.kde.org/projects/frameworks/solid
 
@@ -26,7 +35,9 @@ Package: libkf5solid5
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}, libkf5solid5-data (= ${binary:Version})
+Depends: libkf5solid5-data (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Suggests: media-player-info [linux-any]
 Recommends: solid-bin (= ${binary:Version})
 Description: Qt library to query and control hardware
@@ -39,7 +50,7 @@ Package: libkf5solid5-data
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Suggests: media-player-info [linux-any]
 Recommends: solid-bin (= ${binary:Version})
 Description: Qt library to query and control hardware
@@ -53,7 +64,7 @@ Description: Qt library to query and control hardware
 Package: solid-bin
 Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Qt library to query and control hardware
  Solid is a device integration framework. It provides a way of querying and
  interacting with hardware independently of the underlying operating system.
@@ -66,7 +77,7 @@ Package: qtdeclarative5-kf5solid-5.0
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: Qt library to query and control hardware plugin
  Solid is a device integration framework. It provides a way of querying and
  interacting with hardware independently of the underlying operating system.
