--- a/debian/control
+++ b/debian/control
@@ -35,7 +35,7 @@ Package: libkf5solid5
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: libkf5solid5-data (= ${binary:Version}),
+Depends: libkf5solid5-data (= ${source:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
 Suggests: media-player-info [linux-any]
@@ -47,8 +47,8 @@ Description: Qt library to query and control hardware
  Solid is part of KDE Frameworks 5.
 
 Package: libkf5solid5-data
-Architecture: any
-Multi-Arch: same
+Architecture: all
+Multi-Arch: foreign
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Suggests: media-player-info [linux-any]
