--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ XSBC-Original-Maintainer: Jonathan Riddell <jriddell@ubuntu.com>
 Build-Depends: bison,
                cmake,
                debhelper (>= 9.0.0),
-               extra-cmake-modules (>= 0.0.13),
+               extra-cmake-modules (>= 0.0.14),
                flex,
                libhupnp-dev,
                libudev-dev [linux-any],
@@ -22,8 +22,7 @@ Homepage: https://projects.kde.org/projects/frameworks/solid
 Package: libkf5solid-dev
 Section: libdevel
 Architecture: any
-Depends: libkf5solid5 (= ${binary:Version}), ${misc:Depends},
- qtbase5-dev
+Depends: libkf5solid5 (= ${binary:Version}), qtbase5-dev, ${misc:Depends}
 Description: Qt library to query and control hardware
  Solid is a device integration framework. It provides a way of querying and
  interacting with hardware independently of the underlying operating system.
