--- a/debian/control
+++ b/debian/control
@@ -37,8 +37,8 @@ Multi-Arch: same
 Depends: libkf5solid5-data (= ${source:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
+Recommends: libkf5solid-bin (= ${binary:Version})
 Suggests: media-player-info [linux-any]
-Recommends: solid-bin (= ${binary:Version})
 Description: Qt library to query and control hardware
  Solid is a device integration framework. It provides a way of querying and
  interacting with hardware independently of the underlying operating system.
@@ -49,19 +49,21 @@ Package: libkf5solid5-data
 Architecture: all
 Multi-Arch: foreign
 Depends: ${misc:Depends}
+Recommends: libkf5solid-bin (= ${binary:Version})
 Suggests: media-player-info [linux-any]
-Recommends: solid-bin (= ${binary:Version})
 Description: Qt library to query and control hardware
  Solid is a device integration framework. It provides a way of querying and
  interacting with hardware independently of the underlying operating system.
  .
  Solid is part of KDE Frameworks 5.
  .
- This package contains the translations.
+ This package contains shared data files.
 
-Package: solid-bin
+Package: libkf5solid-bin
 Architecture: any
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Breaks: solid-bin
+Replaces: solid-bin
 Description: Qt library to query and control hardware
  Solid is a device integration framework. It provides a way of querying and
  interacting with hardware independently of the underlying operating system.
@@ -70,10 +72,12 @@ Description: Qt library to query and control hardware
  .
  This package contains the solid-hardware5 tool.
 
-Package: qtdeclarative5-kf5solid-5.0
+Package: qtdeclarative5-kf5solid
 Architecture: any
 Multi-Arch: same
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Breaks: qtdeclarative5-kf5solid-5.0
+Replaces: qtdeclarative5-kf5solid-5.0
 Description: Qt library to query and control hardware plugin
  Solid is a device integration framework. It provides a way of querying and
  interacting with hardware independently of the underlying operating system.
@@ -81,10 +85,10 @@ Description: Qt library to query and control hardware plugin
  This package is part of KDE Frameworks 5.
 
 Package: libkf5solid5-dbg
-Priority: extra
-Section: debug
 Architecture: any
 Multi-Arch: same
+Section: debug
+Priority: extra
 Depends: libkf5solid5 (= ${binary:Version}), ${misc:Depends}
 Description: debug symbols for libsolid
  Solid is a device integration framework. It provides a way of querying and
