--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends: bison,
                flex,
                libhupnp-dev,
                libudev-dev [linux-any],
-               pkg-kde-tools (>= 0.15.15),
+               pkg-kde-tools,
                qt5-default,
                qtbase5-dev,
                qtdeclarative5-dev,
