Use pkg-kde-tools version 3 scripts

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends: bison,
                flex,
                libhupnp-dev,
                libudev-dev [linux-any],
-               pkg-kde-tools,
+               pkg-kde-tools (>= 0.15.15ubuntu1~),
                qt5-default,
                qtbase5-dev,
                qtdeclarative5-dev,
